/* --- CgiHandler.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef CGIHANDLER_H
#define CGIHANDLER_H

class CgiHandler {
public:
    CgiHandler();
    ~CgiHandler();

private:

};

#endif // CGIHANDLER_H
