/* --- PutPatchHandler.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/16/2025
------------------------------------------ */

#ifndef PUTPATCHHANDLER_H
#define PUTPATCHHANDLER_H

class PutPatchHandler {
public:
    PutPatchHandler();
    ~PutPatchHandler();

private:

};

#endif // PUTPATCHHANDLER_H
