@startuml
skinparam packageStyle rectangle
title Routing Layer (server & location aware)

interface Handler {
  +void handle(HttpRequest& req, HttpResponse& res)
}

class StaticHandler {
  +void handle(HttpRequest&, HttpResponse&)
}

class CgiHandler {
  +void handle(HttpRequest&, HttpResponse&)
  -const CgiSpec* selectSpec(const Location&, const ServerConfig&, const string& path) const
}

class ProxyHandler {
  +void handle(HttpRequest&, HttpResponse&)
}

class PutPatchHandler {
  +int handle_put(const HttpRequest&, HttpResponse&)
  +int handle_patch(const HttpRequest&, HttpResponse&)
}

class RouteResolver {
  +const VirtualServer* matchServer(const ServerConfig&, const string& host, int port) const
  +const Location* matchLocation(const VirtualServer&, const string& path) const
}

class Router {
  +void route(HttpRequest& req, HttpResponse& res)
  -RouteResolver resolver
}

Router ..> RouteResolver
Router ..> StaticHandler
Router ..> CgiHandler
Router ..> ProxyHandler
Router ..> PutPatchHandler
Handler ..> HttpRequest
Handler ..> HttpResponse
@enduml
